notebooks/mini_pieman_tardb: include voxel locations alongside WebDataset TAR
Signed-off-by: Eli Sennesh <sennesh.e@northeastern.edu>

--- a/notebooks/mini_pieman_tardb.ipynb
+++ b/notebooks/mini_pieman_tardb.ipynb
@@ -28,6 +28,7 @@
     "import htfa_torch.utils as utils\n",
     "import logging\n",
     "import os\n",
+    "import torch\n",
     "import webdataset as wds"
    ]
   },
@@ -60,12 +61,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06/08/2021 17:05:50 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:05:52 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 17:05:52 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:05:54 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 17:05:54 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:05:56 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000\n"
+      "06/08/2021 17:37:16 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 17:37:18 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 17:37:18 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 17:37:20 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 17:37:20 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 17:37:22 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 17:37:22 Recorded voxel locations\n"
      ]
     }
    ],
@@ -91,10 +93,14 @@
     "        block.task = task\n",
     "        block.load()\n",
     "        \n",
-    "        block.write_wds(sink)\n",
+    "        for vals in block.format_wds():\n",
+    "            sink.write(vals)\n",
     "        \n",
     "        logging.info('Block %d %s of run %d started at %f, ended at %f', i,\n",
     "                     block.task, block.run, sentinel(block.start_time), sentinel(block.end_time))\n",
+    "    \n",
+    "    torch.save(block.locations.to_sparse(), tar_file + '.voxel_locs.pth')\n",
+    "    logging.info('Recorded voxel locations')\n",
     "\n",
     "sink.close()"
    ]
