--- a/notebooks/mini_pieman_tardb.ipynb
+++ b/notebooks/mini_pieman_tardb.ipynb
@@ -61,13 +61,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06/08/2021 17:37:16 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:37:18 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 17:37:18 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:37:20 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 17:37:20 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask None (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 17:37:22 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 17:37:22 Recorded voxel locations\n"
+      "06/08/2021 18:11:31 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 18:11:33 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 18:11:33 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 18:11:35 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 18:11:35 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/08/2021 18:11:37 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
+      "06/08/2021 18:11:37 Recorded voxel locations\n"
      ]
     }
    ],
@@ -88,8 +88,9 @@
     "        task = segments[3]\n",
     "        block = niidb.FMriActivationBlock(zscore=False)\n",
     "        block.block = i\n",
-    "        block.subject = subject\n",
     "        block.filename = data_file\n",
+    "        block.mask = mask_file\n",
+    "        block.subject = subject\n",
     "        block.task = task\n",
     "        block.load()\n",
     "        \n",
@@ -99,7 +100,7 @@
     "        logging.info('Block %d %s of run %d started at %f, ended at %f', i,\n",
     "                     block.task, block.run, sentinel(block.start_time), sentinel(block.end_time))\n",
     "    \n",
-    "    torch.save(block.locations.to_sparse(), tar_file + '.voxel_locs.pth')\n",
+    "    torch.save(block.locations, tar_file + '.voxel_locs.pth')\n",
     "    logging.info('Recorded voxel locations')\n",
     "\n",
     "sink.close()"
