--- a/notebooks/mini_pieman_tardb.ipynb
+++ b/notebooks/mini_pieman_tardb.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/work/AnacondaProjects/HTFATorch\n"
+      "/home/eli/AnacondaProjects/HTFATorch\n"
      ]
     }
    ],
@@ -61,13 +61,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06/08/2021 20:04:59 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 20:05:02 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 20:05:02 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 20:05:06 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 20:05:06 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/08/2021 20:05:09 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000\n",
-      "06/08/2021 20:05:09 Recorded voxel locations\n"
+      "06/09/2021 09:45:40 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 09:45:43 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
+      "06/09/2021 09:45:43 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 09:45:45 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
+      "06/09/2021 09:45:45 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 09:45:47 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
+      "06/09/2021 09:45:47 Recorded metadata, including voxel locations\n"
      ]
     }
    ],
@@ -82,6 +82,8 @@
     "\n",
     "if not existed or OVERWRITE:\n",
     "    data_files = utils.sorted_glob('data/pieman_data/*.nii')\n",
+    "    \n",
+    "    total_trs = 0\n",
     "    for i, data_file in enumerate(data_files):\n",
     "        segments = os.path.splitext(os.path.basename(data_file))[0].split('-')\n",
     "        subject = int(segments[1])\n",
@@ -96,12 +98,19 @@
     "        \n",
     "        for vals in block.format_wds():\n",
     "            sink.write(vals)\n",
-    "        \n",
-    "        logging.info('Block %d %s of run %d started at %f, ended at %f', i,\n",
-    "                     block.task, block.run, sentinel(block.start_time), sentinel(block.end_time))\n",
+    "        block_trs = (block.end_time - block.start_time) + 1\n",
+    "        total_trs += block_trs\n",
+    "\n",
+    "        logging.info('Block %d %s of run %d started at %f, ended at %f, contained %d TRs', i,\n",
+    "                     block.task, block.run, sentinel(block.start_time), sentinel(block.end_time),\n",
+    "                     block_trs)\n",
     "    \n",
-    "    torch.save(block.locations, tar_file + '.voxel_locs.pth')\n",
-    "    logging.info('Recorded voxel locations')\n",
+    "    metadata = {\n",
+    "        'voxel_locations': block.locations,\n",
+    "        'num_times': total_trs,\n",
+    "    }\n",
+    "    torch.save(metadata, tar_file + '.meta')\n",
+    "    logging.info('Recorded metadata, including voxel locations')\n",
     "\n",
     "sink.close()"
    ]
@@ -130,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
