notebooks/mini_pieman_tardb: record per-block information with metadata
Signed-off-by: Eli Sennesh <sennesh.e@northeastern.edu>

--- a/notebooks/mini_pieman_tardb.ipynb
+++ b/notebooks/mini_pieman_tardb.ipynb
@@ -61,13 +61,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06/09/2021 09:45:40 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/09/2021 09:45:43 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
-      "06/09/2021 09:45:43 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/09/2021 09:45:45 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
-      "06/09/2021 09:45:45 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
-      "06/09/2021 09:45:47 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 301 TRs\n",
-      "06/09/2021 09:45:47 Recorded metadata, including voxel locations\n"
+      "06/09/2021 11:19:41 Loading Nifti image data/pieman_data/sub-001-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 11:19:43 Block 0 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 300 TRs\n",
+      "06/09/2021 11:19:43 Loading Nifti image data/pieman_data/sub-002-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 11:19:45 Block 1 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 300 TRs\n",
+      "06/09/2021 11:19:45 Loading Nifti image data/pieman_data/sub-003-task-intact1.nii with mask data/pieman_data/wholebrain.nii.gz (zscore=False, smooth=None, zscore_by_rest=False)\n",
+      "06/09/2021 11:19:48 Block 2 intact1 of run 0 started at 0.000000, ended at 300.000000, contained 300 TRs\n",
+      "06/09/2021 11:19:48 Recorded metadata, including voxel locations\n"
      ]
     }
    ],
@@ -84,6 +84,9 @@
     "    data_files = utils.sorted_glob('data/pieman_data/*.nii')\n",
     "    \n",
     "    total_trs = 0\n",
+    "    metadata = {\n",
+    "        'blocks': []\n",
+    "    }\n",
     "    for i, data_file in enumerate(data_files):\n",
     "        segments = os.path.splitext(os.path.basename(data_file))[0].split('-')\n",
     "        subject = int(segments[1])\n",
@@ -95,20 +98,20 @@
     "        block.subject = subject\n",
     "        block.task = task\n",
     "        block.load()\n",
-    "        \n",
+    "\n",
+    "        metadata['blocks'].append(block.wds_metadata())\n",
+    "\n",
     "        for vals in block.format_wds():\n",
     "            sink.write(vals)\n",
-    "        block_trs = (block.end_time - block.start_time) + 1\n",
+    "        block_trs = (block.end_time - block.start_time)\n",
     "        total_trs += block_trs\n",
     "\n",
     "        logging.info('Block %d %s of run %d started at %f, ended at %f, contained %d TRs', i,\n",
     "                     block.task, block.run, sentinel(block.start_time), sentinel(block.end_time),\n",
     "                     block_trs)\n",
     "    \n",
-    "    metadata = {\n",
-    "        'voxel_locations': block.locations,\n",
-    "        'num_times': total_trs,\n",
-    "    }\n",
+    "    metadata['voxel_locations'] = block.locations\n",
+    "    metadata['num_times'] = total_trs\n",
     "    torch.save(metadata, tar_file + '.meta')\n",
     "    logging.info('Recorded metadata, including voxel locations')\n",
     "\n",
